<resources>
    <string name="app_name">Cars from RollsRoyce</string>
    <string name="favourite">Favourite</string>
    <string name="footer">Footer</string>
    <string name="red_heart">Favourite</string>
    <string name="rollsroyce_inc">RollsRoyce Inc.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sort_by_price">Sort By Price</string>
    <string name="price_low_to_high">Low to High</string>
    <string name="price_high_to_low">High to Low</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="name_a_to_z">A to Z</string>
    <string name="name_z_to_a">Z to A</string>
    <string name="back">Back</string>
    <string name="save_image">Save Image</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="action_recycler_view">RecyclerView</string>
    <string name="skip_intro">Skip</string>
    <string name="get_started_intro">Get Started</string>
    <string name="next_intro">Next</string>
    <string name="heading_intro">Heading</string>
    <string name="reddit_animation">Follow r/RollsRoyce for RollsRoyce Related Posts</string>
    <string name="description_intro">Description</string>
    <string name="image_introduction_intro">Image Introduction</string>
    <string name="first_splash_text">A Crown for Every Achievement</string>
    <string name="loginOrRegister_welcome_txt">Easiest way to\nfind the best RollsRoyce Motor Cars</string>
    <string name="get_started_loginOrRegister_btn_label">Get Started</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login_welcome_txt_login">Hello there !\nWelcome Back</string>
    <string name="facebook_app_id">3215654415121488</string>
    <string name="fb_login_protocol_scheme">fb3215654415121488</string>
    <string name="sign_up_label_login">" Sign up"</string>
    <string name="login_fb_btn_label_login">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="forgot_password_login">Forgot password?</string>
    <string name="no_account_login">Don\’t have an account?</string>
    <string name="divider_or_login">OR</string>
    <string name="info_new_login">No of Attempts Remaining: </string>
    <string name="info_old_login">No of Attempts Remaining: 5</string>
    <string name="sign_up_title_registration">Sign up</string>
    <string name="sign_up_welcome_txt_registration">Hello there !\nWelcome to you</string>
    <string name="sign_up_btn_label_registration">Sign up</string>
    <string name="login_label_registration">" Login"</string>
    <string name="full_name_hint_registration">Full Name</string>
    <string name="phone_no_hint_registration">Phone No.(Optional)</string>
    <string name="profile_pic_registration">Profile Pic</string>
    <string name="have_account_registration">Have an account?</string>
    <string name="image_alert_dialogue">Image Alert Dialogue</string>
    <string name="Description_alert_registration">By Clicking Accept You Agree to our Terms and Condition and Statement of Privacy Policy</string>
    <string name="terms_and_condition_registration">
Terms and Conditions\n\nBy downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also should not try to translate the app into other languages, or make derivative versions. The app belong to LuxuryRack Inc..We do not own or control RollsRoyce Watch Co. Ltd. in any way.\n\nLuxuryRack Inc. is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n\nThe [Cars from RollsRoyce] app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the [Cars from RollsRoyce] app won’t work properly or at all.\n\nThe app does use third party services that declare their own Terms and Conditions.\n\nLink to Terms and Conditions of third party service providers used by the app\n\nGoogle Play Services\n\nFacebook\n\nYou should be aware that there are certain things that LuxuryRack Inc. will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but LuxuryRack Inc. cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n\nIf you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n\nAlong the same lines, LuxuryRack Inc. cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, LuxuryRack Inc. cannot accept responsibility.\n\nWith respect to LuxuryRack Inc.’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. LuxuryRack Inc. accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n\nAt some point, we may wish to update the app. The app is currently available on Android – the requirements for system(and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. LuxuryRack Inc. does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n\nChanges to This Terms and Conditions\n\nWe may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page.\n\nThese terms and conditions are effective as of 2020-08-06\n\nContact Us\n\nIf you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at [rollsroycemotorcars.info@gmail.com].\n\n</string>
    <string name="sort">Sort</string>
    <string name="sign_out_description_home">Do you really want to Sign Out?</string>
    <string name="purchased_description">Item purchased Successfully</string>
    <string name="purchased_ok">Ok</string>
    <string name="sign_out_yes_home">Yes</string>
    <string name="sign_out_no_home">No</string>
    <string name="most_expensive_nav_home">Most Expensive</string>
    <string name="images_nav_home">Image Library</string>
    <string name="videos_nav_home">Video Library</string>
    <string name="blog_nav_home">Blog </string>
    <string name="reddit_nav_home">Reddit </string>
    <string name="profile_nav_home">Profile</string>
    <string name="buy_us_a_watch_nav_home">Buy Us A Watch</string>
    <string name="facts_about_us_nav_home">Facts About Us</string>
    <string name="sign_out_nav_home">SignOut</string>
    <string name="like_us_on_facebook_nav_home">Like Us On Facebook</string>
    <string name="share_on_facebook_nav_home">Share on Facebook</string>
    <string name="share_on_twitter_nav_home">Share on Twitter</string>
    <string name="about_us_nav_home">About Us</string>
    <string name="company_nav_home">Company</string>
    <string name="sort_by_views_images">Sort By Views</string>
    <string name="sort_by_likes_images">Sort By Likes</string>
    <string name="sort_by_comments_images">Sort By Comments</string>
    <string name="sort_by_downloads_images">Sort By Downloads</string>
    <string name="description_youtube_video_post">video description</string>
    <string name="title_youtube_video_post">video Title</string>
    <string name="date_youtube_video_post">video Published at</string>
    <string name="thumbnail_youtube_video_post">Thumbnail</string>
    <string name="thumbnail_youtube_video_detail">Youtube Video Thumbnail</string>
    <string name="title_youtube_video_detail">Youtube Video Title</string>
    <string name="date_youtube_video_detail">Youtube Video Date</string>
    <string name="download_youtube_video_detail">Download This Video</string>
    <string name="description_youtube_video_detail">Youtube Video Description</string>
    <string name="favourite_youtube_video_detail">FAVOURITE</string>
    <string name="comments_youtube_video_detail">COMMENTS</string>
    <string name="update_profile_profile">Update Profile</string>
    <string name="user_image_profile">User Image</string>
    <string name="change_password_profile">Change Password</string>
    <string name="share">Share</string>
</resources>