<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivThumbYoutubeVideoPost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/thumbnail_youtube_video_post"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvDateYoutubeVideoPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:text="@string/date_youtube_video_post"
        android:textColor="@android:color/white"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleYoutubeVideoPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/title_youtube_video_post"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDesYoutubeVideoPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/description_youtube_video_post"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>


</RelativeLayout>