<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    android:id="@+id/relLayYoutubeVideoDetails"
    tools:context=".youtube_video.YoutubeVideoDetailsActivity">


    <ImageView
        android:id="@+id/ivYoutubeVideoDetails"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:tag="image_tag"
        android:contentDescription="@string/thumbnail_youtube_video_detail" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/ytPlayerYoutubeVideoDetails"
        android:layout_width="match_parent"
        android:layout_height="170dp" />


    <LinearLayout
        android:id="@+id/titleLayYoutubeVideoDetails"
        android:background="@drawable/white_background"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/ytPlayerYoutubeVideoDetails"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameYoutubeVideoDetails"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:maxLines="2"
            android:text="@string/title_youtube_video_detail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_black_50"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDateYoutubeVideoDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text="@string/date_youtube_video_detail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_gray_txt"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDownloadYoutubeVideoDetails"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:onClick="downloadVideo"
            android:text="@string/download_youtube_video_detail"
            android:textColor="@color/common_blue_bg" />
    </LinearLayout>
    <!--real image size is 40x50px-->



    <ImageView
        android:id="@+id/ivShareYoutubeVideoDetails"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/ytPlayerYoutubeVideoDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:onClick="share_btn_pressed"
        android:scaleType="fitCenter"
        android:src="@drawable/share"
        android:visibility="visible"
        android:contentDescription="@string/share" />

    <TextView
        android:id="@+id/tvDesYoutubeVideoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLayYoutubeVideoDetails"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:maxLines="4"
        android:text="@string/description_youtube_video_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/common_gray_txt"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesYoutubeVideoDetails"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_youtube_video_detail"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/comments_youtube_video_detail"
            android:textColor="@color/common_blue_bg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvYoutubeVideoDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <!--<ImageView-->
    <!--android:layout_width="40dp"-->
    <!--android:layout_height="40dp"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_marginTop="155dp"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:onClick="playVideo"-->
    <!--android:src="@drawable/play"/>-->
</RelativeLayout>
